--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^48.0.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.8.10"
   },
