--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "mongodb": "^3.5.7",
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
